[gd_scene load_steps=2 format=3 uid="uid://njkpswiisikh"]

[ext_resource type="Script" uid="uid://0wel2gjjbocm" path="res://Scripts/main.gd" id="1_s0gyx"]

[node name="Root" type="Node"]
script = ExtResource("1_s0gyx")

[node name="EffectHolder" type="Node" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="CanvasLayer" type="CanvasLayer" parent="Control"]

[node name="NextButton" type="Button" parent="Control/CanvasLayer"]
anchors_preset = -1
anchor_left = 2.85
anchor_top = 1.725
anchor_right = 5.35
anchor_bottom = 2.5
offset_left = -2328.2
offset_top = -817.8
offset_right = -5058.2
offset_bottom = -1280.0
focus_mode = 0
text = "Siguiente"

[node name="PreviousButton" type="Button" parent="Control/CanvasLayer"]
anchors_preset = -1
anchor_left = 8.8
anchor_top = 1.725
anchor_right = 11.3
anchor_bottom = 2.625
offset_left = -10087.6
offset_top = -817.8
offset_right = -12817.6
offset_bottom = -1361.0
scale = Vector2(1.0132, 1)
focus_mode = 0
text = "Anterior
"

[connection signal="pressed" from="Control/CanvasLayer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Control/CanvasLayer/PreviousButton" to="." method="_on_previous_button_pressed"]
